--- a/SDL_basics.vcxproj
+++ b/SDL_basics.vcxproj
@@ -91,6 +91,7 @@
     <ClCompile Include="FieldBackGrass.cpp" />
     <ClCompile Include="FieldFront.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Paralax.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Rect.cpp" />
     <ClCompile Include="Vector2.cpp" />
@@ -108,6 +109,7 @@
     <ClInclude Include="FieldBackGrass.h" />
     <ClInclude Include="FieldFront.h" />
     <ClInclude Include="main.h" />
+    <ClInclude Include="Paralax.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Rect.h" />
     <ClInclude Include="Vector2.h" />
