--- a/SDL_basics.vcxproj.filters
+++ b/SDL_basics.vcxproj.filters
@@ -73,7 +73,9 @@
     <ClCompile Include="main.cpp">
       <Filter>Framework</Filter>
     </ClCompile>
-    <ClCompile Include="PerlinNoise.cpp" />
+    <ClCompile Include="PerlinNoise.cpp">
+      <Filter>Framework</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FieldBackEarth.h">
@@ -151,7 +153,9 @@
     <ClInclude Include="SunLightHelper.h">
       <Filter>Framework</Filter>
     </ClInclude>
-    <ClInclude Include="PerlinNoise.h" />
+    <ClInclude Include="PerlinNoise.h">
+      <Filter>Framework</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
