projektfiles zugefgt und psds gelcht.

--- a/SDL_basics.vcxproj
+++ b/SDL_basics.vcxproj
@@ -177,8 +177,16 @@
     <ClCompile Include="FieldFront.cpp" />
     <ClCompile Include="Fists.cpp" />
     <ClCompile Include="Inventory.cpp" />
+    <ClCompile Include="InventoryCoal.cpp" />
+    <ClCompile Include="InventoryCopper.cpp" />
     <ClCompile Include="InventoryEarth.cpp" />
+    <ClCompile Include="InventoryIron.cpp" />
     <ClCompile Include="InventoryObject.cpp" />
+    <ClCompile Include="InventorySilver.cpp" />
+    <ClCompile Include="InventorySteelAxe.cpp" />
+    <ClCompile Include="InventorySteelPick.cpp" />
+    <ClCompile Include="InventorySteelSlice.cpp" />
+    <ClCompile Include="InventoryStone.cpp" />
     <ClCompile Include="Light.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Paralax.cpp" />
@@ -204,6 +212,14 @@
     <ClInclude Include="FieldBackGrass.h" />
     <ClInclude Include="FieldFront.h" />
     <ClInclude Include="Fists.h" />
+    <ClInclude Include="InventoryCoal.h" />
+    <ClInclude Include="InventoryCopper.h" />
+    <ClInclude Include="InventoryIron.h" />
+    <ClInclude Include="InventorySilver.h" />
+    <ClInclude Include="InventorySteelAxe.h" />
+    <ClInclude Include="InventorySteelPick.h" />
+    <ClInclude Include="InventorySteelSlice.h" />
+    <ClInclude Include="InventoryStone.h" />
     <ClInclude Include="Light.h" />
     <ClInclude Include="LightHelper.h" />
     <ClInclude Include="PerlinNoise.h" />
