--- a/SDL_basics.vcxproj.filters
+++ b/SDL_basics.vcxproj.filters
@@ -115,6 +115,12 @@
     <ClCompile Include="CraftingRecipeTest.cpp">
       <Filter>CraftingRecipes</Filter>
     </ClCompile>
+    <ClCompile Include="FieldBackWater.cpp">
+      <Filter>BackFields</Filter>
+    </ClCompile>
+    <ClCompile Include="InventoryWater.cpp">
+      <Filter>InvenotryObjects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FieldBackEarth.h">
@@ -233,6 +239,12 @@
     </ClInclude>
     <ClInclude Include="CraftingRecipeTest.h">
       <Filter>CraftingRecipes</Filter>
+    </ClInclude>
+    <ClInclude Include="FieldBackWater.h">
+      <Filter>BackFields</Filter>
+    </ClInclude>
+    <ClInclude Include="InventoryWater.h">
+      <Filter>InvenotryObjects</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
